# TestingTemplateCPP

./: CMakeLists.txt  LICENSE  README.md
include/: lib.h
src/: CMakeLists.txt  lib.cpp  main.cpp
test/: CMakeLists.txt  sum_test.cpp
